# rsc-pcctae

./: .dockerignore  .env.example  .gitignore  ATUALIZACAO-0.4.4-para-0.5.0.md  ATUALIZACAO-0.5.0-para-0.6.0.md  ATUALIZACAO-0.6.0-para-0.7.0.md  ATUALIZACAO-0.7.0-para-0.7.1.md  ATUALIZACAO-0.7.1-para-0.7.2.md  ATUALIZACAO-0.7.2-para-0.7.3.md  ATUALIZACAO-0.7.3-para-0.8.0.md  ATUALIZACAO-0.8.0-para-0.8.1.md  ATUALIZACAO-0.8.1-para-0.8.2.md  ATUALIZACAO-0.8.2-para-0.8.3.md  CHANGELOG-0.4.3.md  CHANGELOG-0.4.4.md  CHANGELOG-0.5.0.md  CHANGELOG-0.6.0.md  CHANGELOG-0.7.0.md  CHANGELOG-0.7.1.md  CHANGELOG-0.7.2.md  CHANGELOG-0.7.3.md  CHANGELOG-0.8.0.md  CHANGELOG-0.8.1.md  CHANGELOG-0.8.2.md  CHANGELOG-0.8.3.md  CHANGELOG.md  Dockerfile  Dockerfile.prod  INSTALACAO-LIMPA.md  MANIFEST.txt  Makefile  README.md  VALIDATION.txt  compose.prod.yaml  compose.yaml  manage.py  pyproject.toml
apps/auditoria/: admin.py  middleware.py  models.py  services.py
apps/cadastros/: apps.py  context_processors.py  forms.py  permissions.py  registry.py  urls.py  views.py
apps/comissoes/: admin.py  models.py
apps/contas/: admin.py  apps.py  forms.py  middleware.py  models.py  permissions.py  services.py  urls.py  views.py
apps/core/: context.py  exceptions.py  logging.py  middleware.py  models.py  profile.py  services.py  (+3 more)
config/: urls.py
docs/: auditoria.md  central-cadastros.md  formulario-f00.md  integracao-ufsb.md  meus-dados-funcionais.md  modelo-simplificado-rsc.md  padroes-interface-requerimento.md  segregacao-funcoes.md
scripts/: check.sh  init_env.py
templates/: base.html
(+122 files in other folders)
